Fix scroll in modal on mobile

--- a/core/uri/css/app.css/css/style.css
+++ b/core/uri/css/app.css/css/style.css
@@ -199,7 +199,7 @@ img[data-img-uuid].nb-img-loaded { opacity: 1; }
 
 #modal.nb-close { display: none; }
 
-#modal-content { max-width: 680px; min-width: 480px; max-height: 100%; background: white; padding: 50px 20px 20px; position: relative; border-radius: 4px; overflow: auto; }
+#modal-content { max-width: 680px; min-width: 480px; max-height: 100%; background: white; padding: 50px 20px 20px; position: relative; border-radius: 4px; overflow: auto; -webkit-overflow-scrolling: touch; }
 
 @media (min-width: 1000px) { #modal-content { padding: 50px 40px 40px; } }
 
